@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.glowroot</groupId>
     <artifactId>glowroot-parent</artifactId>
-    <version>0.13.7-SNAPSHOT</version>
+    <version>0.14.1-beta.2-SNAPSHOT</version>
     <relativePath>../../..</relativePath>
   </parent>
 
@@ -18,19 +18,18 @@
 
   <properties>
     <!-- instrumented libraries -->
-    <apache.httpclient.version>4.5.11</apache.httpclient.version>
-    <apache.httpasyncclient.version>4.1.4</apache.httpasyncclient.version>
+    <apache.httpclient5x.version>5.2.1</apache.httpclient5x.version>
+    <apache.httpclient.version>4.5.14</apache.httpclient.version>
+    <apache.httpasyncclient.version>4.1.5</apache.httpasyncclient.version>
     <apache.httpclient3x.version>3.1</apache.httpclient3x.version>
-    <apache.httpcore.version>4.4.13</apache.httpcore.version>
+    <apache.httpcore.version>4.4.14</apache.httpcore.version>
     <asynchttpclient1x.version>1.9.40</asynchttpclient1x.version>
-    <asynchttpclient2x.version>2.10.4</asynchttpclient2x.version>
-    <wiremock.version>2.26.0</wiremock.version>
-    <okhttpclient.version>4.3.1</okhttpclient.version>
+    <asynchttpclient2x.version>2.12.3</asynchttpclient2x.version>
+    <wiremock.version>2.27.2</wiremock.version>
+    <okhttpclient.version>4.9.2</okhttpclient.version>
     <okhttpclient2x.version>2.7.5</okhttpclient2x.version>
-    <!-- CXF 3.2.0+ requires Java 8+ -->
-    <cxf.version>3.1.18</cxf.version>
-    <!-- Spring 5+ requires Java 8+ -->
-    <spring.version>4.3.26.RELEASE</spring.version>
+    <cxf.version>3.4.5</cxf.version>
+    <spring.version>5.3.23</spring.version>
     <axis.version>1.4</axis.version>
   </properties>
 
@@ -39,6 +38,12 @@
       <groupId>org.glowroot</groupId>
       <artifactId>glowroot-agent-plugin-api</artifactId>
       <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+      <version>${apache.httpclient5x.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -68,7 +73,7 @@
     <dependency>
       <groupId>com.ning</groupId>
       <artifactId>async-http-client</artifactId>
-      <version>${asynchttpclient1x.version}</version> <!-- $NO-MVN-MAN-VER$ -->
+      <version>${asynchttpclient1x.version}</version>
       <scope>provided</scope>
       <exclusions>
         <exclusion>
@@ -86,6 +91,22 @@
         <exclusion>
           <groupId>org.asynchttpclient</groupId>
           <artifactId>async-http-client-netty-utils</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-common</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-resolver</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-transport</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-buffer</artifactId>
         </exclusion>
         <exclusion>
           <groupId>io.netty</groupId>
@@ -132,8 +153,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -218,17 +239,66 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <!-- wiremock-standalone is needed in order to compile against wiremock.org.apache.http.HttpRequest -->
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock-standalone</artifactId>
+      <version>${wiremock.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>javax.xml.ws</groupId>
+      <artifactId>jaxws-api</artifactId>
+      <version>2.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>javax.jws</groupId>
+      <artifactId>jsr181-api</artifactId>
+      <version>1.0-MR1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>com.sun.activation</groupId>
+      <artifactId>jakarta.activation</artifactId>
+      <version>1.2.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <!-- this is needed for running tests on Java 9+ -->
+      <groupId>com.sun.mail</groupId>
+      <artifactId>mailapi</artifactId>
+      <version>1.6.7</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm</artifactId>
-      <version>7.3.1</version>
+      <version>9.5</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-common</artifactId>
-      <version>1.3.61</version>
+      <version>1.4.10</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -247,24 +317,6 @@
         </executions>
       </plugin>
     </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <!-- this is just so eclipse will use Java 7 for this module, since Java 7 is needed for
-            running the tests against the latest versions of okhttp and cxf -->
-          <artifactId>maven-compiler-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>default-testCompile</id>
-              <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
   </build>
 
   <profiles>
@@ -311,105 +363,6 @@
           </exclusions>
         </dependency>
       </dependencies>
-    </profile>
-    <profile>
-      <id>not-test-java6</id>
-      <activation>
-        <property>
-          <name>!glowroot.test.java6</name>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <!-- wiremock-standalone is needed in order to compile against
-            wiremock.org.apache.http.HttpRequest, but the artifact also causes problems when running
-            tests against Java 6 because it includes (non-shaded) Servlet 3.1 API (which is compiled
-            against Java 7) -->
-          <groupId>com.github.tomakehurst</groupId>
-          <artifactId>wiremock-standalone</artifactId>
-          <version>${wiremock.version}</version>
-          <scope>provided</scope>
-        </dependency>
-        <!-- dependencies below are required on Java 7+ -->
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>javax.xml.bind</groupId>
-          <artifactId>jaxb-api</artifactId>
-          <version>2.3.1</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>javax.xml.ws</groupId>
-          <artifactId>jaxws-api</artifactId>
-          <version>2.3.1</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>javax.jws</groupId>
-          <artifactId>jsr181-api</artifactId>
-          <version>1.0-MR1</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>org.glassfish.jaxb</groupId>
-          <artifactId>jaxb-runtime</artifactId>
-          <version>2.3.1</version>
-          <scope>test</scope>
-        </dependency>
-        <dependency>
-          <!-- this is needed for running tests on Java 9 -->
-          <groupId>com.sun.activation</groupId>
-          <artifactId>javax.activation</artifactId>
-          <version>1.2.0</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>test-java6</id>
-      <activation>
-        <property>
-          <name>glowroot.test.java6</name>
-        </property>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>default-testCompile</id>
-                  <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-    <profile>
-      <id>java6or7</id>
-      <activation>
-        <jdk>[1.6,1.8)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <configuration>
-              <!-- this is needed when building with Java 6 or 7 -->
-              <argLine>-XX:MaxPermSize=128m</argLine>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
     <profile>
       <id>async-http-client-2.x</id>
